# cmdpass

./: .gitignore  CMakeLists.txt  README.md
config/: config.h.in
src/: config.h  main.cpp
src/ipc/: NamedPipe.cpp  NamedPipe.h  Signal.h
src/service/: Service.cpp  Service.h  createService.cpp  createService.h  getService.cpp  getService.h  serviceRequired.cpp  serviceRequired.h  startService.cpp  startService.h  stopService.cpp  stopService.h
src/utils/: ArgParser.cpp  ArgParser.h  Logger.cpp  Logger.h
